--- a/index.html
+++ b/index.html
@@ -1,36 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Protocol Simulation</title>
+  <meta charset="UTF-8" />
+  <title>Protocol Simulation Games</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #111;
-      color: #eee;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+      background-color: #000;
+      color: #fff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
+      padding: 2rem;
+      line-height: 1.7;
     }
-    .content {
+
+    h1, h2, h3 {
+      color: #ffffff;
+    }
+
+    a {
+      color: #4ea9ff;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    header {
       text-align: center;
+      margin-bottom: 3rem;
     }
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
+
+    section {
+      margin-bottom: 2.5rem;
     }
-    p {
-      font-size: 1rem;
-      color: #aaa;
+
+    footer {
+      text-align: center;
+      color: #888;
+      margin-top: 4rem;
+      font-size: 0.9rem;
+    }
+
+    ul {
+      padding-left: 1.2rem;
+    }
+
+    .link-box {
+      background-color: #111;
+      padding: 1rem;
+      border: 1px solid #333;
+      border-radius: 5px;
+      margin-top: 1rem;
+      display: inline-block;
     }
   </style>
 </head>
 <body>
-  <div class="content">
+
+  <header>
     <h1>Protocol Simulation</h1>
-    <p>We make cool games. Stay tuned.</p>
-  </div>
+    <p>Mobile Simulation Games Studio</p>
+  </header>
+
+  <section>
+    <h2>📱 Our Games</h2>
+    <p>We specialize in realistic simulation and driving games available on the Google Play Store under the name <strong>Protocol Simulation</strong>.</p>
+    <p>Examples include:</p>
+    <ul>
+      <li>Car Game Simulator</li>
+      <li>Highway Traffic Racing</li>
+      <li>Police Patrol & Driving Simulator</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>🔗 Important Links</h2>
+    <div class="link-box">
+      <p><a href="ProtocolGamesWebsite/privacy-policy.html">Privacy Policy</a></p>
+    </div>
+  </section>
+
+  <section>
+    <h2>📢 Updates & Blog (Coming Soon)</h2>
+    <p>We will soon publish development logs, gameplay insights, and update announcements here.</p>
+  </section>
+
+  <section>
+    <h2>📬 Contact</h2>
+    <p>If you have any questions or suggestions, please reach out to us:</p>
+    <ul>
+      <li>Publisher Name: <strong>Protocol Simulation</strong> on Google Play</li>
+    </ul>
+  </section>
+
+  <footer>
+    &copy; 2025 Protocol Simulation. All rights reserved.
+  </footer>
+
 </body>
 </html>
