--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
     <!-- Buttons -->
     <div class="flex justify-center mt-8 space-x-4">
-      <a href="https://play.google.com/store/apps/dev?id=5128778655876625840" target="_blank" 
+      <a href="https://play.google.com/store/apps/dev?id=6892059516122641709" target="_blank" 
          class="bg-gradient-to-r from-orange-500 to-orange-800 py-3 px-6 rounded-md hover:from-orange-600 hover:to-orange-900 transition">
-        Official Studio Page
+        Official Google Playstore Page
       </a>
       <a href="ProtocolGamesWebsite/privacy-policy.html" 
          class="py-3 px-6 rounded-md border border-gray-600 hover:bg-gray-800 transition">
@@ -61,7 +61,7 @@
     <h2 class="text-3xl font-semibold mb-6">📬 Contact</h2>
     <p class="text-neutral-400">If you have any questions or suggestions, please reach out to us:</p>
     <ul class="mt-4 space-y-2">
-      <li>Publisher Name: <strong>Protocol Simulation</strong> on Google Play</li>
+      <li>Publisher Name: <strong>Protocol Simulation Gaming</strong> on Google Play</li>
     </ul>
   </section>
 
