--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <h2 class="text-3xl font-semibold mb-6">📬 Contact</h2>
     <p class="text-neutral-400">If you have any questions or suggestions, please reach out to us:</p>
     <ul class="mt-4 space-y-2">
-      <li>Publisher Name: <strong>Protocol Simulation Gaming</strong> on Google Play</li>
+      <li>Publisher Name: <strong>Protocol Simulation</strong> on Google Play</li>
     </ul>
   </section>
 
